--- a/jarana/mi_portafolio/templates/mi_portafolio/misdatos.html
+++ b/jarana/mi_portafolio/templates/mi_portafolio/misdatos.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'mi_portafolio/base.html' %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Datos</title>
 </head>
 <body>
+    {% block content%}
     <H1 style="font-family: fantasy;">MIS DATOS</H1>
-    <p style="font-weight: bold;">Nombre:</p><span>Jonathan Arana</span>
+    <p style="font-weight: bold;">Nombre:</p><span>{{data.nombre}} {{data.apellido}}</span>
     <h3>Conocimiento</h3>
     <ul>
-        <li>Python 3.10+</li>
-        <li>HTML5</li>
-        <li>SQL</li>
-        <li>Git</li>
-        <li>Django 5</li>
+    {% for skill in data.skills %}
+        <li>{{skill}}</li>
+    {%endfor%}
     </ul>
-
+    {% endblock%}
 </body>
-</html>
