--- a/jarana/mi_portafolio/templates/mi_portafolio/base.html
+++ b/jarana/mi_portafolio/templates/mi_portafolio/base.html
@@ -4,11 +4,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
   .fakeimg {
     height: 200px;
     background: #aaa;
   }
+  .post-form label {
+    font-weight: bold;
+    color: blue;
+  }
+
+  .post-form input[type="text"],
+  .post-form input[type="number"],
+  .post-form textarea {
+    width: 100%;
+    border-radius: 1px;
+    background-color: #fff;
+    background-clip: padding-box;
+  }
+
   </style>
 </head>
 <body>
@@ -20,16 +35,16 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="/">Inicio</a>
+          <a class="nav-link active" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/misdatos">Mis Datos</a>
+          <a class="nav-link" href="/mydata">My Data</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">profiles</a>
+          <a class="nav-link" href="/profile">Profiles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link " href="/profile/new/">New Profile</a>
         </li>
       </ul>
     </div>
