--- a/jarana/mi_portafolio/templates/mi_portafolio/misdatos.html
+++ b/jarana/mi_portafolio/templates/mi_portafolio/misdatos.html
@@ -7,12 +7,10 @@
 <body>
     {% block content%}
     <H1 style="font-family: fantasy;">MIS DATOS</H1>
-    <p style="font-weight: bold;">Nombre:</p><span>{{data.nombre}} {{data.apellido}}</span>
+    <p style="font-weight: bold;">Nombre:</p><span>{{data.first_name}} {{data.last_name}}</span>
     <h3>Conocimiento</h3>
     <ul>
-    {% for skill in data.skills %}
-        <li>{{skill}}</li>
-    {%endfor%}
+        <li>{{data.skills}}</li>
     </ul>
     {% endblock%}
 </body>
