--- a/jarana/mi_portafolio/templates/mi_portafolio/profile.html
+++ b/jarana/mi_portafolio/templates/mi_portafolio/profile.html
@@ -12,17 +12,19 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Apellido</th>
+                <th scope="col">Nº</th>
+                <th scope="col">Nombre Completo</th>
                 <th scope="col">Dirección</th>
+                <th scope="col">Acciones</th>
             </tr>
         </thead>
         <tbody>
             {% for profile in profile_list %}
             <tr>
-                <td>{{profile.first_name}}</td>
-                <td>{{profile.last_name}}</td>
+                <td>{{profile.id}}</td>
+                <td>{{profile.first_name}} {{profile.last_name}}</td>
                 <td>{{profile.address}}</td>
+                <td><a href="{% url 'view-profile' id=profile.id %}" class="bi bi-eyeglasses"></i></td>
             </tr>
             {%endfor%}
         </tbody>
